--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+sesile_circuit:
+    resource: "@SesileCircuitBundle/Controller/"
+    type:     annotation
+    prefix:   /circuit/
+
 sesile_document:
     resource: "@SesileDocumentBundle/Controller/"
     type:     annotation
@@ -7,6 +12,7 @@ sesile_classeur:
     resource: "@SesileClasseurBundle/Controller/"
     type:     annotation
     prefix:   /classeur/
+
 
 sesile_main:
     resource: "@SesileMainBundle/Controller/"
@@ -36,3 +42,6 @@ fos_user_register:
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
+
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
