--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,7 +30,7 @@ twig:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        [ SesileMainBundle ]
+    bundles:        [ SesileMainBundle, AdmingeneratorGeneratorBundle  ]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
@@ -74,3 +74,7 @@ fos_user:
     db_driver:     orm
     firewall_name: main
     user_class:    Sesile\UserBundle\Entity\User
+
+admingenerator_generator:
+    use_doctrine_orm:     true
+
