--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "friendsofsymfony/user-bundle": "dev-master",
         "friendsofsymfony/jsrouting-bundle": "~1.1",
         "oneup/uploader-bundle": "1.0.*@dev",
-        "jms/security-extra-bundle": "dev-master"
+        "jms/security-extra-bundle": "dev-master",
+        "cedriclombardot/admingenerator-generator-bundle": "2.3.*@dev"
     },
     "scripts": {
         "post-install-cmd": [
@@ -42,9 +43,10 @@
         ]
     },
     "config": {
-        "bin-dir": "bin"
+        "bin-dir": "bin",
+        "component-dir": "web/components"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "extra": {
         "symfony-app-dir": "app",
