--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "friendsofsymfony/jsrouting-bundle": "~1.1",
         "oneup/uploader-bundle": "1.0.*@dev",
         "jms/security-extra-bundle": "dev-master",
-        "cedriclombardot/admingenerator-generator-bundle": "2.3.*@dev"
+        "cedriclombardot/admingenerator-generator-bundle": "2.3.*@dev",
     },
     "scripts": {
         "post-install-cmd": [
