--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,7 +25,9 @@ framework:
 twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
-
+    form:
+        resources:
+            - 'SesileMainBundle:Form:fields.html.twig'
 # Assetic Configuration
 assetic:
     debug:          %kernel.debug%
