test envoi mail ajout user

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -76,3 +76,7 @@ fos_user:
     db_driver:     orm
     firewall_name: main
     user_class:    Sesile\UserBundle\Entity\User
+swiftmailer:
+    transport:  %mailer_transport%
+    username:   %mailer_user%
+    password:   %mailer_password%
