--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "friendsofsymfony/user-bundle": "dev-master",
         "friendsofsymfony/jsrouting-bundle": "~1.1",
         "oneup/uploader-bundle": "1.0.*@dev",
-        "jms/security-extra-bundle": "dev-master"
+        "jms/security-extra-bundle": "dev-master",
+		"besimple/sso-auth-bundle": "*"
+
     },
     "scripts": {
         "post-install-cmd": [
