--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,7 +70,12 @@ swiftmailer:
 oneup_uploader:
     mappings:
         docs:
-            frontend: dropzone
+            frontend: custom
+            custom_frontend:
+                class: Sesile\DocumentBundle\Controller\DocumentUploader
+                name: DocumentUploader
+            use_orphanage: true
+
 
 fos_user:
     db_driver:     orm
