--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -85,3 +85,9 @@ swiftmailer:
     transport:  %mailer_transport%
     username:   %mailer_user%
     password:   %mailer_password%
+
+
+parameters:
+     cas_server:        172.17.100.78
+     cas_port:          389
+     cas_path:          /cas/
