--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -88,6 +88,6 @@ swiftmailer:
 
 
 parameters:
-     cas_server:        172.17.100.78
-     cas_port:          389
-     cas_path:          /cas/
+     cas_server: sso.dev.sictiam.fr
+     cas_port: 389
+     cas_path: /cas/
