Surcharge du formulaire d'édition de profil user

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -81,6 +81,11 @@ fos_user:
     db_driver:     orm
     firewall_name: main
     user_class:    Sesile\UserBundle\Entity\User
+    profile:
+        form:
+            type: sesile_user_profile
+
+
 swiftmailer:
     transport:  %mailer_transport%
     username:   %mailer_user%
