--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -21,7 +21,7 @@ security:
             logout:
                 success_handler: security.logout.success_handler
             cas:
-                cas_server: sso.sictiam.fr
+                cas_server: 172.17.100.78
                 cas_port: 443
                 cas_path: /
                 ca_cert_path: ~
