--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -20,15 +20,9 @@ sesile_main:
     prefix:   /
 
 sesile_users:
-    resource: "@SesileUserBundle/Controller/DefaultController.php"
+    resource: "@SesileUserBundle/Controller/"
     type: annotation
     prefix: /user
-
-sesile_hierarchy:
-    resource: "@SesileUserBundle/Controller/HierarchieController.php"
-    type: annotation
-    prefix: /hierarchy
-
 
 _default:
     pattern: /
@@ -37,8 +31,8 @@ oneup_uploader:
     resource: .
     type: uploader
 
-fos_user_security:
-    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+sesile_security:
+    resource: "@SesileMainBundle/Resources/config/security.xml"
 fos_user_profile:
     resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
     prefix: /profile
