--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,7 +1,7 @@
 # app/config/security.yml
 jms_security_extra:
-    secure_all_services: true
-    expressions: false
+    secure_all_services: false
+    expressions: true
 
 security:
     encoders:
@@ -28,3 +28,11 @@ security:
                 cas_protocol: '2.0'
                 cas_mapping_attribute:
                 check_path: /login_check
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_USER]
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN]
+    access_control:
+        - { path: ^/user, roles: ROLE_USER }
+        - { path: ^/circuit, roles: ROLE_USER }
+        - { path: ^/classeur, roles: ROLE_USER }
+        - { path: ^/doc, roles: ROLE_USER }
