Début d'intégration de la signature

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -32,7 +32,9 @@ security:
         ROLE_ADMIN: [ROLE_USER]
         ROLE_SUPER_ADMIN: [ROLE_ADMIN]
     access_control:
+        - { path: ^/doc/notifymodif, roles: IS_AUTHENTICATED_ANONYMOUSLY}
         - { path: ^/user, roles: ROLE_USER }
         - { path: ^/circuit, roles: ROLE_USER }
         - { path: ^/classeur, roles: ROLE_USER }
         - { path: ^/doc, roles: ROLE_USER }
+
