--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -20,6 +20,8 @@ framework:
     session:         ~
     fragments:       ~
     http_method_override: true
+    session:
+            save_path: "%kernel.root_dir%/sessions/"
 
 # Twig Configuration
 twig:
