Correction d'un problème avec le cas

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,6 +30,8 @@ twig:
     form:
         resources:
             - 'SesileMainBundle:Form:fields.html.twig'
+    globals:
+        upload_path: uploads/avatars/
 # Assetic Configuration
 assetic:
     debug:          %kernel.debug%
