--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -100,6 +100,10 @@ parameters:
     cas_server: sso.dev.sictiam.fr
     cas_port: 389
     cas_path: /
+    gorg:
+        path: %kernel.root_dir%/../vendor/gorg/phpcas/
+    upload:
+        path: %kernel.root_dir%/../web/uploads/avatars/
 
 
 jms_di_extra:
