--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -100,6 +100,15 @@ parameters:
     cas_server: sso.dev.sictiam.fr
     cas_port: 389
     cas_path: /
+    cas_protocol: '2.0'
+    gorg:
+        path: %kernel.root_dir%/../vendor/gorg/phpcas/
+    upload:
+        path: %kernel.root_dir%/../web/uploads/avatars/
+    ldap:
+        dn_admin: cn=admin,dc=sictiam,dc=local
+        dn_user: cn=Users,dc=sictiam,dc=local
+        password: WcJa37BI
 
 
 jms_di_extra:
