Edition d'un classeur : Affiche le déposant dans un classeur existant (reste css) Ajout d'une classe pour situer le validant Seules les personnes après le validant actuel sont triables dans un circuit Gestion des collectivités

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -101,10 +101,12 @@ parameters:
         path: %kernel.root_dir%/../vendor/gorg/phpcas/
     upload:
         path: %kernel.root_dir%/../web/uploads/avatars/
+        logo_coll: %kernel.root_dir%/../web/uploads/logo_coll/
     ldap:
         dn_admin: cn=admin,dc=sictiam,dc=local
         dn_user: cn=Users,dc=sictiam,dc=local
         password: WcJa37BI
+
 
 
 jms_di_extra:
