--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -93,7 +93,7 @@ fos_user:
 
 
 parameters:
-    cas_server: sso.dev.sictiam.fr
+    cas_server: 172.17.100.78
     cas_port: 389
     cas_path: /
     cas_protocol: '2.0'
