--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -115,3 +115,32 @@ jms_di_extra:
     locations:
         all_bundles: true
 
+
+fos_rest:
+    param_fetcher_listener: true
+    body_listener: true
+    body_converter:
+      enabled: true
+    format_listener:
+        rules:
+            # setting fallback_format to json means that instead of considering the next rule in case of a priority mismatch, json will be used
+            - { path: '^/',  priorities: ['json', 'xml'],  prefer_extension: false }
+    view:
+        formats:
+            rss: false
+            xml: true
+            json: true
+            html: true
+        failed_validation: HTTP_BAD_REQUEST
+        default_engine: twig
+        view_response_listener: 'force'
+
+
+
+nelmio_api_doc: ~
+
+
+sensio_framework_extra:
+    view:    { annotations: false }
+    router:  { annotations: true }
+    request: { converters: true }
