--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -17,11 +17,11 @@ parameters:
     database_driver: pdo_mysql
     database_host: 127.0.0.1
     database_port: null
-    database_name: sesile
+    database_name: sesileprod
     database_user: root
     database_password: ***REMOVED***
     secret: ***REMOVED***
-    cas_server: 172.17.100.43
+    cas_server: 172.17.100.61
     cas_port: 389
     cas_path: /
     cas_protocol: '2.0'
@@ -44,7 +44,7 @@ security:
             logout:
                 success_handler: security.logout.success_handler
             cas:
-                cas_server: demosso.sictiam.fr
+                cas_server: sso.sictiam.fr
                 cas_port: 443
                 cas_path: /
                 ca_cert_path: ~
