Création des fichiers buildnumber et commit

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -175,3 +175,6 @@ services:
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onDomainParse }
 
+
+build:
+    majorversion: 1
