Menu reste ouvert Corrections depuis mantis

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -29,3 +29,22 @@ assetic:
 
 #swiftmailer:
 #    delivery_address: me@example.com
+
+parameters:
+    cas_server: 172.17.100.78
+    cas_port: 389
+    cas_path: /
+    cas_protocol: '2.0'
+    gorg:
+        path: %kernel.root_dir%/../vendor/gorg/phpcas/
+    upload:
+        path: %kernel.root_dir%/../web/uploads/avatars/
+        logo_coll: %kernel.root_dir%/../web/uploads/logo_coll/
+        msg_acc: %kernel.root_dir%/../web/uploads/documents/msg_accueil.txt
+    ldap:
+        dn_admin: cn=admin,dc=sictiam,dc=local
+        dn_user: cn=Users,dc=sictiam,dc=local
+        password: WcJa37BI
+    domain_parse:
+        default: sesile
+        dbname: sictiam
