Modif sur les délégations (délégation inexistante lors de l'édition d'un classeur) Config pour les notifications par mail (création boite sesile)

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,8 +70,8 @@ doctrine:
 swiftmailer:
     transport: smtp
     host:      servermail4.sictiam.fr
-    username:  r.lasry@sictiam.fr
-    password:  7Gdxqwc4
+    username:  sesile@sictiam.fr
+    password:  3Pu#8kV
     spool:
             type: file
             path: "%kernel.root_dir%/spool"
