mail qui ne partent pas (debug)

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -75,6 +75,7 @@ swiftmailer:
     spool:
             type: file
             path: "%kernel.root_dir%/spool"
+    logging:  "%kernel.debug%"
 
 oneup_uploader:
     mappings:
