--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,7 +71,7 @@ swiftmailer:
     transport: smtp
     host:      servermail4.sictiam.fr
     username:  r.lasry@sictiam.fr
-    password:  Gdxqwc4
+    password:  7Gdxqwc4
 
 oneup_uploader:
     mappings:
@@ -81,7 +81,6 @@ oneup_uploader:
                 class: Sesile\DocumentBundle\Controller\DocumentUploader
                 name: DocumentUploader
             use_orphanage: true
-
 
 fos_user:
     db_driver:     orm
