--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.5.*",
+        "symfony/symfony": "2.4.*",
         "doctrine/orm": ">=2.2.3,<2.4-dev",
         "doctrine/doctrine-bundle": "1.2.*",
         "doctrine/doctrine-fixtures-bundle": "2.2.*@dev",
@@ -28,8 +28,8 @@
         "friendsofsymfony/jsrouting-bundle": "~1.1",
         "oneup/uploader-bundle": "1.0.*@dev",
         "jms/security-extra-bundle": "dev-master",
-        "gorg/cas-bundle": "dev-master#fc8bc2c03c397f9436b99b1d5245a30b14793bb2",
-        "gorg/user-bundle": "dev-master#f0e0b4bd1f1b7d5d1efad7cc91a21a34b265e0f8",
+        "gorg/cas-bundle": "master",
+        "gorg/user-bundle": "master",
         "sabre/dav": "1.8.*",
         "friendsofsymfony/rest-bundle": "1.1.*",
         "jms/serializer-bundle": "dev-master",
