--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,6 +70,9 @@ doctrine:
 swiftmailer:
     transport: mail
     host:      localhost
+    spool:
+            type: file
+            path: "%kernel.root_dir%/spool"
 
 oneup_uploader:
     mappings:
