--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -14,3 +14,19 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+parameters:
+    database_driver: pdo_mysql
+    database_host: 127.0.0.1
+    database_port: null
+    database_name: sesiledemo
+    database_user: root
+    database_password: ***REMOVED***
+    secret: ***REMOVED***
+    cas_server: 172.17.100.43
+    cas_port: 389
+    cas_path: /
+    cas_protocol: '2.0'
+    ldap:
+        dn_admin: cn=admin,dc=sictiam,dc=fr
+        dn_user: cn=Users,dc=sictiam,dc=fr
+        password: oP1U88zz
