--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -98,7 +98,7 @@ parameters:
         path: %kernel.root_dir%/../vendor/gorg/phpcas/
     upload:
         path: %kernel.root_dir%/../web/uploads/avatars/
-        fics: %kernel.root_dir%/../web/uploads/docs/
+        fics: /home/sesile/current/web/uploads/docs/
         logo_coll: %kernel.root_dir%/../web/uploads/logo_coll/
         msg_acc: %kernel.root_dir%/../web/uploads/documents/msg_accueil.txt
     ldap:
@@ -114,12 +114,6 @@ parameters:
         commit: 994e6f7902355e6bf62dde14804e0bd9863d5662
         buildnumber: 90
     majorversion: 1
-
-
-jms_di_extra:
-    locations:
-        all_bundles: true
-
 
 # La suite, c'est pour l'api
 fos_rest:
@@ -169,6 +163,3 @@ services:
         arguments: ["@doctrine.orm.entity_manager", "@security.context", "@service_container"]
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onDomainParse }
-
-
-
