--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -98,7 +98,7 @@ parameters:
         path: %kernel.root_dir%/../vendor/gorg/phpcas/
     upload:
         path: %kernel.root_dir%/../web/uploads/avatars/
-        fics: /home/sesile/current/web/uploads/docs/
+        fics: %kernel.root_dir%/../web/uploads/docs/
         logo_coll: %kernel.root_dir%/../web/uploads/logo_coll/
         msg_acc: %kernel.root_dir%/../web/uploads/documents/msg_accueil.txt
     ldap:
