Premier commit sur les evos sesile. services organisationnels et groupes d'utilisateurs, plus d'infos ici: H:\POLE_INTERNET\SUIVI_PROJETS

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -31,6 +31,7 @@ assetic:
 #    delivery_address: me@example.com
 
 parameters:
+    database_name: sesile-evo
     cas_server: sso.dev.sictiam.fr
     cas_port: 389
     cas_path: /
