Conflicts: 	app/config/config_evolutions.yml

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -31,7 +31,7 @@ assetic:
 #    delivery_address: me@example.com
 
 parameters:
-    database_name: sesile-evo
+    database_name: sesile_evolutions
     cas_server: sso.dev.sictiam.fr
     cas_port: 389
     cas_path: /
