--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -15,7 +15,7 @@ framework:
     templating:
         engines: ['twig']
         #assets_version: SomeVersionScheme
-    default_locale:  "%locale%"
+    default_locale:  fr
     trusted_proxies: ~
     session:         ~
     fragments:       ~
