commit résolution bugs 2150 - 2574 - 2576 - 2579 - 2591 - 2620 - 2615 - 2621 - 2622 - 2623 - 2627

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -116,6 +116,10 @@ parameters:
         buildnumber: 1
     majorversion: 2
     url_applet: signature.sesile.fr
+    ovh_credential:
+        application: ***REMOVED***
+        secret: ***REMOVED***
+        consumer_key: ***REMOVED***
 
 # La suite, c'est pour l'api
 fos_rest:
