--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -54,3 +54,4 @@ parameters:
         environnement: demo.sesile
         zone: sictiam.fr
         target: dmzproxy.sictiam.fr.
+    email_sender_address: sictiam.dev@sesile.fr
