--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,7 +71,7 @@ doctrine:
 swiftmailer:
     transport: %mailer_transport%
     host:      %mailer_host%
-    port:      %mailer_port%
+    port:      25
 #    transport: mail
 #    host:      localhost
 
