mise en prod info82

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -39,6 +39,7 @@ parameters:
         path: %kernel.root_dir%/../vendor/gorg/phpcas/
     upload:
         path: %kernel.root_dir%/../web/uploads/avatars/
+        signatures: %kernel.root_dir%/../web/uploads/signatures/
         logo_coll: %kernel.root_dir%/../web/uploads/logo_coll/
         msg_acc: %kernel.root_dir%/../web/uploads/documents/msg_accueil.txt
         fics: %kernel.root_dir%/../web/uploads/docs/
