--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,6 +34,7 @@ twig:
         upload_path: uploads/avatars/
         upload_path_logo: uploads/logo_coll/
         upload_path_docs: /uploads/docs/
+        upload_path_signatures: /uploads/signatures/
     exception_controller: 'FOS\RestBundle\Controller\ExceptionController::showAction'
 
 # Assetic Configuration
