--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,7 +9,8 @@ security:
             id: fos_user.user_provider.username
     firewalls:
         dev:
-            pattern:  ^/(_(profiler|wdt)|css|images|js)/
+#            pattern:  ^/(_(profiler|wdt)|css|images|js)/
+            pattern:  ^/(_wdt|css|images|js)/
             security: false
         secured_area:
             pattern:    ^/
