Mantis 0002896: e-signature PDF : Permettre de signer electroniquement tous les pdf présent dans le classeur

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -177,6 +177,6 @@ services:
             - { name: kernel.event_listener, event: kernel.request, method: onDomainParse }
     sesile.fos_user.user_enabled:
         class: Sesile\UserBundle\EventListener\TokenListener
-        arguments: ["@router", "@security.context", "@session"]
+        arguments: ["@router", "@security.context", "@service_container"]
         tags:
             - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
