--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -31,6 +31,7 @@ security:
         ROLE_SUPER_ADMIN: [ROLE_ADMIN]
 
     access_control:
+        - { path: ^/api, roles: IS_AUTHENTICATED_ANONYMOUSLY}
         - { path: ^/doc/uploadfile, roles: IS_AUTHENTICATED_ANONYMOUSLY}
         - { path: ^/doc/notifymodif, roles: IS_AUTHENTICATED_ANONYMOUSLY}
         - { path: ^/doc/downloadJWS, roles: IS_AUTHENTICATED_ANONYMOUSLY }
