Fix flux service deactive

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -175,8 +175,8 @@ services:
         arguments: ["@doctrine.orm.entity_manager", "@security.context", "@service_container"]
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onDomainParse }
-    sesile.fos_user.user_enabled:
-        class: Sesile\UserBundle\EventListener\TokenListener
-        arguments: ["@router", "@security.context", "@service_container"]
-        tags:
-            - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
+#    sesile.fos_user.user_enabled:
+#        class: Sesile\UserBundle\EventListener\TokenListener
+#        arguments: ["@router", "@security.context", "@service_container"]
+#        tags:
+#            - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
