[Fix] IP des Proxies autorisés
Ce fix permet d'avoir les liens absolu générés avec https.
Les headers envoyés par les proxies sont pris en compte

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -16,7 +16,7 @@ framework:
         engines: ['twig']
         #assets_version: SomeVersionScheme
     default_locale:  fr
-    trusted_proxies: ~
+    trusted_proxies: ['***REMOVED***', '***REMOVED***']
     session:         ~
     fragments:       ~
     http_method_override: true
