[Evo] #454 - Montée de version Symfony et bundles
  - MAJ core SF 2.3 -> 2.8
  - MAJ vendors
  - Suppression vendor Sabre Dav
  - MAJ code deprecated functions
  - MAJ form pour SF 2.8

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -55,10 +55,10 @@ security:
 
     firewalls:
         dev:
-            pattern:  ^/(_(profiler|wdt)|css|images|js)/
+            path:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
         secured_area:
-            pattern:    ^/
+            path:    ^/
             anonymous: true
             provider: webservice
             logout:
