--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -91,16 +91,28 @@ fos_user:
     user_class:    Sesile\UserBundle\Entity\User
     profile:
         form:
-            type: sesile_user_profile
+#            type: sesile_user_profile
+            type: Sesile\UserBundle\Form\Type\ProfileFormType
 
+be_simple_sso_auth:
+    admin_sso:
+        protocol:
+            id: cas
+            version: 2
+        server:
+            id: cas
+            login_url: https://sso.dev.sictiam.fr/login
+            logout_url: https://sso.dev.sictiam.fr/logout
+            validation_url: https://sso.dev.sictiam.fr/serviceValidate
 
 parameters:
     cas_server: sso.dev.sictiam.fr
-    cas_port: 389
-    cas_path: /
-    cas_protocol: '2.0'
-    gorg:
-        path: %kernel.root_dir%/../vendor/gorg/phpcas/
+#    cas_port: 389
+#    cas_path: /
+#    cas_protocol: '2.0'
+#    gorg:
+#        path: %kernel.root_dir%/../vendor/gorg/phpcas/
+    be_simple.sso_auth.client.option.curlopt_ssl_verifypeer.value: FALSE
     upload:
         path: %kernel.root_dir%/../web/uploads/avatars/
         fics: %kernel.root_dir%/../web/uploads/docs/
@@ -132,12 +144,13 @@ fos_rest:
     param_fetcher_listener: true
     body_listener: true
     body_converter:
-      enabled: true
+      enabled: false
     format_listener:
         rules:
             # setting fallback_format to json means that instead of considering the next rule in case of a priority mismatch, json will be used
             - { path: '^/api',  priorities: ['json', 'xml'],  prefer_extension: false }
-            - { path: '^/', priorities: [ 'html', '*/*'], fallback_format: html, prefer_extension: true }
+            - { path: '^/', priorities: [ 'html', '*/*'], fallback_format: html, prefer_extension: false }
+            - { path: '^/doc/download_sign', priorities: [ 'pdf' ], fallback_format: ~, prefer_extension: true }
     view:
         formats:
             rss: false
@@ -160,23 +173,18 @@ nelmio_api_doc:
             template: SesileApiBundle::homedoc.html.twig
 
 sensio_framework_extra:
-    view:    { annotations: false }
+    view:    { annotations: true }
     router:  { annotations: true }
     request: { converters: true }
 
 services:
     sesile.tokens.action_listener:
         class: Sesile\ApiBundle\EventListener\TokenListener
-        arguments: ["@doctrine.orm.entity_manager", "@security.context"]
+        arguments: ["@doctrine.orm.entity_manager", "@security.token_storage"]
         tags:
             - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
     kernel.listener.route_listener:
         class: Sesile\MainBundle\EventListener\RouteListener
-        arguments: ["@doctrine.orm.entity_manager", "@security.context", "@service_container"]
+        arguments: ["@doctrine.orm.entity_manager", "@security.token_storage", "@service_container", "@security.authorization_checker"]
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onDomainParse }
-#    sesile.fos_user.user_enabled:
-#        class: Sesile\UserBundle\EventListener\TokenListener
-#        arguments: ["@router", "@security.context", "@service_container"]
-#        tags:
-#            - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
