--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -35,7 +35,7 @@ sesile_users:
     prefix: /user
 
 _default:
-    pattern: /
+    path: /
 
 oneup_uploader:
     resource: .
@@ -57,13 +57,13 @@ fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
 
 login:
-    pattern:   /login_check
+    path:   /login_check
 
 login_check:
-    pattern:   /login_check
+    path:   /login_check
 
 logout:
-    pattern:   /logout
+    path:   /logout
 
 
 NelmioApiDocBundle:
