[Fix] config_demo.yml sso bundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -106,7 +106,7 @@ be_simple_sso_auth:
 
 
 parameters:
-    cas_server: sso.dev.sictiam.fr
+#    cas_server: sso.dev.sictiam.fr
 #    cas_port: 389
 #    cas_path: /
 #    cas_protocol: '2.0'
