--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -1,6 +1,17 @@
 imports:
     - { resource: config_dev.yml }
 
+be_simple_sso_auth:
+    admin_sso:
+        protocol:
+            id: cas
+            version: 2
+        server:
+            id: cas
+            login_url: https://sso.sictiam.fr/login
+            logout_url: https://sso.sictiam.fr/logout
+            validation_url: https://sso.sictiam.fr/serviceValidate
+
 framework:
     test: ~
     session:
@@ -22,10 +33,6 @@ parameters:
     database_user: root
     database_password: ***REMOVED***
     secret: ***REMOVED***
-    cas_server: 172.17.100.43
-    cas_port: 389
-    cas_path: /
-    cas_protocol: '2.0'
     ldap:
         dn_admin: cn=admin,dc=sictiam,dc=fr
         dn_user: cn=Users,dc=sictiam,dc=fr
